--- a/INTRO.html
+++ b/INTRO.html
@@ -42,7 +42,7 @@
             <source src="globe.mp4.mp4" type="video/mp4">
           </video>
         </center>
-          <a href="file:///C:/Users/crist/OneDrive/Desktop/games%20files/EXPENSE%20OVERSIGHT/MAIN%20PAGE.html">
+          <a href="https://zfreaper.github.io/my-own-website/MAIN%20PAGE.html">
             <button class="overlay-button"></button></a>
       </div>
 </body>
