--- a/HISTORY.html
+++ b/HISTORY.html
@@ -63,7 +63,7 @@
 </header>
 
 <nav>
-  <a href="file:///C:/Users/crist/OneDrive/Desktop/games%20files/EXPENSE%20OVERSIGHT/MAIN%20PAGE.html">HOME</a>
+  <a href="https://zfreaper.github.io/my-own-website/MAIN%20PAGE.html">HOME</a>
 </nav>
 <main>
   <h2></h2>
