--- a/MONEY.html
+++ b/MONEY.html
@@ -127,7 +127,7 @@ footer p {
     </header>
 
     <nav>
-        <a href="file:///C:/Users/crist/OneDrive/Desktop/games%20files/EXPENSE%20OVERSIGHT/MAIN%20PAGE.html">HOME</a>
+        <a href=""HOME</a>
       </nav>
       
     <section id="add-expense">
