--- a/MONEY.html
+++ b/MONEY.html
@@ -127,7 +127,7 @@ footer p {
     </header>
 
     <nav>
-        <a href=""HOME</a>
+        <a href="https://zfreaper.github.io/my-own-website/MAIN%20PAGE.html">HOME</a>
       </nav>
       
     <section id="add-expense">
