--- a/MAIN PAGE.html
+++ b/MAIN PAGE.html
@@ -60,10 +60,10 @@
 </header>
 
 <nav>
-  <a href="file:///C:/Users/crist/OneDrive/Desktop/games%20files/EXPENSE%20OVERSIGHT/ACCOUNT.html">ACCOUNT</a>
-  <a href="file:///C:/Users/crist/OneDrive/Desktop/games%20files/EXPENSE%20OVERSIGHT/MONEY.html">MONEY</a>
-  <a href="file:///C:/Users/crist/OneDrive/Desktop/games%20files/EXPENSE%20OVERSIGHT/CONVERT.html">CONVERT</a>
-  <a href="file:///C:/Users/crist/OneDrive/Desktop/games%20files/EXPENSE%20OVERSIGHT/HISTORY.html">HISTORY</a>
+  <a href="https://zfreaper.github.io/my-own-website/ACCOUNT.html">ACCOUNT</a>
+  <a href="https://zfreaper.github.io/my-own-website/MONEY.html">MONEY</a>
+  <a href="https://zfreaper.github.io/my-own-website/CONVERT.html">CONVERT</a>
+  <a href="https://zfreaper.github.io/my-own-website/HISTORY.html">HISTORY</a>
 </nav>
 
 <main>
